syntax = "proto3";

package auth;

option go_package = "todo/pkg/proto/auth";

//JWT Auth
service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
}

message RegisterRequest {
    string login = 1;
    string password = 2;
}

message RegisterResponse {
    bool success = 1;
}

message LoginRequest {
    string login = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

